--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div class="container">
         <div class="hero-content">
             <h1>Hi, I'm <span>NETHANGI DISSANAYAKE</span></h1>
-            <p>Data-driven. Curiosity-fueled. Challenge-ready.
-            I'm a Computer Engineering undergrad passionate about ML and AI — hacking my way through data to build smarter systems and uncover insights that matter.</p>
+            <p>Logic-led. Innovation-powered. Built to solve.
+   I'm a Computer Engineering undergrad Passionate about clean code and creative problem-solving — crafting smart, user-focused solutions that make tech work better for everyone.</p>
             <div class="hero-btns">
                 <a href="#contact" class="btn">Contact Me</a>
             </div>
