--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <ul class="about-list">
                     <li>3rd year <strong>Computer Engineering</strong> undergraduate at the University of Ruhuna.</li>
                     <li>I'm deeply passionate about <strong>Data Science</strong>, <strong>AI/ML</strong>, and <strong>Statistics</strong> — fields where curiosity meets impact.</li>
-                    <li>My <strong>interests</strong> also span <strong>software engineering</strong>, and creating tech that blends intelligence with usability.</li>
+                    <li>My <strong>interests</strong> also span <strong>Software Engineering</strong>, and creating tech that blends intelligence with usability.</li>
                     <li>
                         <div class="tech-stack-container">
                             <strong>Technology stack I work with:</strong>
@@ -96,6 +96,7 @@
                                 <span>MySQL</span>
                                 <span>Jira</span>
                                 <span>Git & GitHub</span>
+                                <span>MERN stack</span>
                             </div>
                         </div>
                     </li>
