--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <span>HTML</span>
                                 <span>JavaScript</span>
                                 <span>SQL</span>
-                                <span>MS Power Bi</span>
+                                <span>MS Power BI</span>
                                 <span>MS Excel</span>
                                 <span>Streamlit</span>
                                 <span>MySQL</span>
